--- a/ShoppingListProject/app/build.gradle
+++ b/ShoppingListProject/app/build.gradle
@@ -37,6 +37,11 @@ android {
 
 dependencies {
 
+    // Kotlin navigation component
+    def nav_version = "2.3.5"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
