--- a/ShoppingListProject/app/src/main/AndroidManifest.xml
+++ b/ShoppingListProject/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/launcherStyle">
-        <activity android:name=".MainActivity"
+        <activity android:name=".view.MainActivity"
             android:screenOrientation="portrait"
             android:launchMode="singleInstance"
             android:windowSoftInputMode="adjustResize">
